secondo esercizio fatto

--- a/index.html
+++ b/index.html
@@ -11,5 +11,96 @@
 </head>
 <body>
     
+    <div class="container">
+        <main>
+            <h3>Esercizio per Casa</h3>
+            <!-- primo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-1">
+                        <div class="riga blue center">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="riga blue center">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="riga blue center">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="riga blue center">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="riga blue center">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="riga blue center">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="riga blue center">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="riga blue center">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="riga blue center">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="riga blue center">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="riga blue center">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="riga blue center">
+                            1 col
+                        </div>
+                    </div>
+                </div>
+            </section>  
+            <!-- secondo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-2">
+                        <div class="blue riga">
+                            col
+                        </div>
+                    </div>
+                    <div class="col-5">
+                        <div class="blue riga">
+                            col
+                        </div>
+                    </div>
+                    <div class="col-5">
+                        <div class="blue riga">
+                            col
+                        </div>
+                    </div>
+                </div>
+            </section>
+            terzo esercizio
+        </main>
+    </div>  
 </body>
 </html>
