--- a/index.html
+++ b/index.html
@@ -99,7 +99,14 @@
                     </div>
                 </div>
             </section>
-            terzo esercizio
+            <!-- terzo esercizio -->
+            <section>
+                <div class="row">
+                    <div class="col-12 blue riga">
+                        12 col
+                    </div>
+                </div>
+            </section>
         </main>
     </div>  
 </body>
