--- a/index.html
+++ b/index.html
@@ -103,7 +103,29 @@
             <section>
                 <div class="row">
                     <div class="col-12 blue riga">
-                        12 col
+                        <div class="blue riga">
+                            12 col
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- quarto esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-8">
+                        <div class="blue riga">
+                            8 col
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="blue riga">
+                            2 col
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="blue riga">
+                            2 col
+                        </div>
                     </div>
                 </div>
             </section>
