--- a/index.html
+++ b/index.html
@@ -129,6 +129,36 @@
                     </div>
                 </div>
             </section>
+            <!-- quinto esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-1">
+                        <div class="blue riga">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="blue riga">
+                            2 col
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="blue riga">
+                            2 col
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="blue riga">
+                            6 col
+                        </div>
+                    </div>
+                    <div class="col-1">
+                        <div class="blue riga">
+                            1 col
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>  
 </body>
