--- a/index.html
+++ b/index.html
@@ -159,6 +159,35 @@
                     </div>
                 </div>
             </section>
+            <!-- sesto esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="row">
+                            <div class="col-2 riga blue">
+                                <div style="margin: 10px; border: 1px solid white; background-color: green;">
+                                    Nested 2 col
+                                </div> 
+                            </div>
+                            <div class="col-2 riga blue">
+                                <div>
+                                    Nested 2 col
+                                </div>
+                            </div>
+                            <div class="col-8 blue riga">
+                                <div class="green">
+                                    Nested 8 col
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 blue">
+                        <div class="row">
+
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>  
 </body>
