--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <!-- terzo esercizio -->
             <section>
                 <div class="row">
-                    <div class="col-12 blue riga">
+                    <div class="col-12">
                         <div class="blue riga">
                             12 col
                         </div>
@@ -163,30 +163,46 @@
             <section>
                 <div class="row">
                     <div class="col-6">
-                        <div class="row">
-                            <div class="col-2 riga blue">
-                                <div style="margin: 10px; border: 1px solid white; background-color: green;">
-                                    Nested 2 col
-                                </div> 
-                            </div>
-                            <div class="col-2 riga blue">
-                                <div>
-                                    Nested 2 col
+                        <div class="blue grande">
+                            <div class="row">
+                                <div class="col-2">
+                                    <div class="green riga">
+                                        Nested 2 col
+                                    </div> 
                                 </div>
-                            </div>
-                            <div class="col-8 blue riga">
-                                <div class="green">
-                                    Nested 8 col
+                                <div class="col-2">
+                                    <div class="green riga">
+                                        Nested 2 col
+                                    </div>
+                                </div>
+                                <div class="col-8">
+                                    <div class="green riga">
+                                        Nested 8 col
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 blue">
-                        <div class="row">
-
+                    <div class="col-6">
+                        <div class="blue grande">
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="green riga">
+                                        Nested 6
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="green riga">
+                                        Nested 6
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </section>
+            <section>
+                <div class="white"></div>
             </section>
         </main>
     </div>  
