--- a/index.html
+++ b/index.html
@@ -201,9 +201,208 @@
                     </div>
                 </div>
             </section>
+            <!-- spazio -->
             <section>
                 <div class="white"></div>
             </section>
+            <!-- settimo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="blue"></div>
+                    </div>
+                </div>
+            </section>
+            <!-- ottavo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-1">
+                        <div class="blue">
+
+                        </div>
+                    </div>
+                    <div class="col-11">
+                        <div class="blue">
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- nono esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-2">
+                        <div class="blue">
+
+                        </div>
+                    </div>
+                    <div class="col-10">
+                        <div class="blue">
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- decimo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-3">
+                        <div class="blue">
+
+                        </div>
+                    </div>
+                    <div class="col-9">
+                        <div class="blue">
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- undicesimo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-4">
+                        <div class="blue">
+
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class="blue">
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- dodicesimo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-5">
+                        <div class="blue">
+
+                        </div>
+                    </div>
+                    <div class="col-7">
+                        <div class="blue">
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- tredicesimo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="blue">
+
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="blue">
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <h3>Offset</h3>
+            <!-- quattordicesimo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-offset-11 col-1">
+                        <div class="blue">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- quindicesimo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-offset-10 col-2">
+                        <div class="blue">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- sedicesimo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-offset-9 col-3">
+                        <div class="blue">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- diciasettesimo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-offset-8 col-4">
+                        <div class="blue">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- diciottesimo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-offset-7 col-5">
+                        <div class="blue">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- dicianovesimo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-offset-6 col-6">
+                        <div class="blue">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- ventesimo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-offset-5 col-7">
+                        <div class="blue">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- ventunesimo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-offset-4 col-8">
+                        <div class="blue">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- ventiduesimo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-offset-3 col-9">
+                        <div class="blue">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- ventitresimo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-offset-2 col-10">
+                        <div class="blue">
+                        </div>
+                    </div>
+                </div>
+            </section> 
+            <!-- ventiquattresimo esercizio  -->
+            <section>
+                <div class="row">
+                    <div class="col-offset-1 col-11">
+                        <div class="blue">
+                        </div>
+                    </div>
+                </div>
+            </section>                                   
         </main>
     </div>  
 </body>
