--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <!-- primo bonus  -->
+        <!-- primo bonus nested -->
         <h3>Nested</h3>
         <section>
             <div class="row">
@@ -47,24 +47,96 @@
                 </div>
             </div>
         </section>
-        <!-- secondo bonus  -->
+        <!-- secondo bonus alignment -->
         <h3>Alignment</h3>
         <section>
             <div class="row start">
                 <div class="col-6">
-                    <div class="blue">start</div>
+                    <div class="blue row center middle">start</div>
                 </div>
             </div>
             <div class="row center">
                 <div class="col-6">
-                    <div class="blue">center</div>
+                    <div class="blue row center middle">center</div>
                 </div>
             </div>
             <div class="row end">
                 <div class="col-6">
-                    <div class="blue">end</div>
+                    <div class="blue row center middle">end</div>
                 </div>
             </div>
         </section>
+        <section>
+            <div class="row top">
+                <div class="col-6">
+                    <div class="blue grandissimo"></div>
+                </div>
+                <div class="col-6">
+                    <div class="blue riga">top</div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="row middle">
+                <div class="col-6">
+                    <div class="blue grandissimo"></div>
+                </div>
+                <div class="col-6">
+                    <div class="blue riga">center</div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="row bottom">
+                <div class="col-6">
+                    <div class="blue grandissimo"></div>
+                </div>
+                <div class="col-6">
+                    <div class="blue riga">bottom</div>
+                </div>
+            </div>
+        </section>
+        <!-- terzo bonus justify content  -->
+        <h3> Justify Content</h3>
+        <h4>Space Around</h4>
+        <section>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="blue grandissimo">
+                            <div class="row around contenitore middle">
+                                <div class="col-2">
+                                    <div class="green"></div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="green"></div>
+                                </div>
+                                <div class="col-2">
+                                    <div class="green"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+        <h4>Space Between</h4>
+        <section>
+            <div class="row">
+                <div class="col-12">
+                    <div class="blue grandissimo">
+                        <div class="row between contenitore middle">
+                            <div class="col-2">
+                                <div class="green"></div>
+                            </div>
+                            <div class="col-2">
+                                <div class="green"></div>
+                            </div>
+                            <div class="col-2">
+                                <div class="green"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
     </main>
 </body>
